tests/negative/traits/inherit_dyn_down_cast.orng
// inherit_dyn_down_cast.orng:9:6: error: expected a value of type `&dyn B`, got a value of type `&dyn A`
//     a as &dyn B
//     ^
// 
trait A {}
trait B: A {}

fn try_to_down_cast(a: &dyn A) -> &dyn B {
    a as &dyn B
}

fn main() {}